--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
-    <script src="moment.js"></script>    
+    <script async src="script.js"></script>
+    <script async src="moment.js"></script>    
 
+    
     <div id="main">
         <div class="header">
             <h1>PageSpeed Excercise</h1>
