--- a/index.html
+++ b/index.html
@@ -1,55 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>PageSpeed Practice</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>PageSpeed Practice</title>
 </head>
-
 <body>
-
+<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css?v=1234" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
+<link rel="stylesheet" href="side-menu.css">
 <div id="layout">
-
-    <div id="main">
-        <div class="header">
-            <h1>PageSpeed Excercise test</h1>
-            <h2>Implement best practices for web performance.</h2>
-        </div>
-
-        <div id="howto" class="content">
-            <h2 class="content-subhead">Why use the PageSpeed tools</h2>
-            <p>
-                Fast and optimized pages lead to higher visitor engagement, retention, and conversions. The PageSpeed family of tools is designed to help you optimize the performance of your website. PageSpeed Insights products will help you identify performance best practices that can be applied to your site, and PageSpeed optimization tools can help you automate the process. For more visit <a href="https://developers.google.com/speed/pagespeed/">https://developers.google.com/speed/pagespeed/</a>
-            </p>
-
-            <h2 id="latin" class="content-subhead">Now Let's Speak Some Latin</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-
-           <div class="pure-g">
-                <div class="pure-u-1-4"><img class="pure-img-responsive"
-                                             srcset="images/S/10948794_523766494432191_181942170_n.jpg 86w, images/M/10948794_523766494432191_181942170_n.jpg 200w">
-                </div>
-                <div class="pure-u-1-4"><img class="pure-img-responsive"
-                                             srcset="images/S/11296875_1576154892651065_104049781_n.jpg 86w , images/M/11296875_1576154892651065_104049781_n.jpg 200w">
-                </div>
-                <div class="pure-u-1-4"><img class="pure-img-responsive"
-                                             srcset="images/S/11373836_977992532219941_1246945570_n.jpg 86w, images/M/11373836_977992532219941_1246945570_n.jpg 200w ">
-                </div>
-                <div class="pure-u-1-4"><img class="pure-img-responsive"
-                                             srcset="images/S/10249317_657733337629239_1612782864_n.jpg 86w, images/M/10249317_657733337629239_1612782864_n.jpg 200w">
-                </div>
-            </div>
-
-            <h2 id="resizing" class="content-subhead">Try Resizing your Browser</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-        </div>
-    </div>
-
     <!-- Menu toggle -->
     <a href="#menu" id="menuLink" class="menu-link">
         <!-- Hamburger icon -->
@@ -71,14 +30,50 @@
             </ul>
         </div>
     </div>
+    
+    <script src="script.js"></script>
+    <script src="moment.js"></script>    
 
+    <div id="main">
+        <div class="header">
+            <h1>PageSpeed Excercise</h1>
+            <h2>Implement best practices for web performance.</h2>
+            <h2>
+            <script>document.write(moment().format('MMMM Do YYYY'))</script>            
+            </h2>
+        </div>
 
+        <div id="howto" class="content">
+            <h2 class="content-subhead">Why use the PageSpeed tools</h2>
+            <p>
+            Fast and optimized pages lead to higher visitor engagement, retention, and conversions. The PageSpeed family of tools is designed to help you optimize the performance of your website. PageSpeed Insights products will help you identify performance best practices that can be applied to your site, and PageSpeed optimization tools can help you automate the process. For more visit <a href="https://developers.google.com/speed/pagespeed/">https://developers.google.com/speed/pagespeed/</a>
+            </p>
+
+            <h2 id="latin" class="content-subhead">Now Let's Speak Some Latin</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+
+            <div class="pure-g">
+                <div class="pure-u-1-4">
+                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/10948794_523766494432191_181942170_n.jpg">
+                </div>
+                <div class="pure-u-1-4">
+                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/11296875_1576154892651065_104049781_n.jpg">
+                </div>
+                <div class="pure-u-1-4">
+                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/11373836_977992532219941_1246945570_n.jpg">
+                </div>
+                <div class="pure-u-1-4">
+                    <img class="pure-img-responsive" src="http://scontent-b-lax.cdninstagram.com/hphotos-xap1/t51.2885-15/10249317_657733337629239_1612782864_n.jpg">
+                </div>               
+            </div>
+
+            <h2 id="resizing" class="content-subhead">Try Resizing your Browser</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+    </div>
 </div>
-
-<link rel="stylesheet" href="css/pure-min.css">
-
-
-<script async src="script.js"></script>
-<script async src="moment.js"></script>
-
 </body></html>
