--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 <style></style>
 </head>
 <body>
-<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css?v=1234" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
-<link rel="stylesheet" href="side-menu.css">
-<div id="layout">
-    <!-- Menu toggle -->
-    <a href="#menu" id="menuLink" class="menu-link">
-        <!-- Hamburger icon -->
+<div id="layout"><a href="#menu" id="menuLink" class="menu-link">
         <span></span>
     </a>
 
@@ -33,10 +28,6 @@
             </ul>
         </div>
     </div>
-    
-    <script async src="script.js"></script>
-    <script async src="moment.js"></script>    
-
     <div id="main">
         <div class="header">
             <h1>PageSpeed Excercise</h1>
@@ -79,4 +70,7 @@
         </div>
     </div>
 </div>
-</body></html>
+</body>
+    <script async src="script.js"></script>
+    <script async src="moment.js"></script>    
+</html>
