--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
             </p>
 
             <div class="pure-g">
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/10948794_523766494432191_181942170_n.jpg">
+                <div class="pure-u-1-4"><img class="pure-img-responsive"
+                                             srcset="images/S/10948794_523766494432191_181942170_n.jpg 86w, images/M/10948794_523766494432191_181942170_n.jpg 200w">
                 </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/11296875_1576154892651065_104049781_n.jpg">
+                <div class="pure-u-1-4"><img class="pure-img-responsive"
+                                             srcset="images/S/11296875_1576154892651065_104049781_n.jpg 86w , images/M/11296875_1576154892651065_104049781_n.jpg 200w">
                 </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/11373836_977992532219941_1246945570_n.jpg">
+                <div class="pure-u-1-4"><img class="pure-img-responsive"
+                                             srcset="images/S/11373836_977992532219941_1246945570_n.jpg 86w, images/M/11373836_977992532219941_1246945570_n.jpg 200w ">
                 </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://scontent-b-lax.cdninstagram.com/hphotos-xap1/t51.2885-15/10249317_657733337629239_1612782864_n.jpg">
-                </div>               
+                <div class="pure-u-1-4"><img class="pure-img-responsive"
+                                             srcset="images/S/10249317_657733337629239_1612782864_n.jpg 86w, images/M/10249317_657733337629239_1612782864_n.jpg 200w">
+                </div>
             </div>
 
             <h2 id="resizing" class="content-subhead">Try Resizing your Browser</h2>
